--- a/widget/templates/home.html
+++ b/widget/templates/home.html
@@ -1,6 +1,10 @@
+<div class="overlay background"
+     ng-if="WidgetHome.media.data.design.backgroundImage && WidgetHome.deviceWidth != 0 && WidgeHome.deviceHeight != 0">
+    <img ng-src="{{WidgetHome.media.data.design.backgroundImage |cropImage : WidgetHome.deviceWidth : WidgetHome.deviceHeight}}">
+</div>
 <div id="home">
-  <div ng-if="WidgetHome.media.data.design.listLayout"
-      ng-include="'templates/layouts/' + WidgetHome.media.data.design.listLayout+ '.html'">
-  </div>
+    <div ng-if="WidgetHome.media.data.design.listLayout"
+         ng-include="'templates/layouts/' + WidgetHome.media.data.design.listLayout+ '.html'">
+    </div>
 </div>
 
