--- a/widget/templates/layouts/item-1.html
+++ b/widget/templates/layouts/item-1.html
@@ -1,4 +1,4 @@
-<div class="holder padding-zero">
+<div class="holder padding-zero text-overlay">
     <div class="media-center-plugin layout1">
         <div class="media-center-banner clearfix">
             <div ng-class="WidgetMedia.showVideo == false ? '' : 'video-container-background'"
