--- a/widget/templates/layouts/item-2.html
+++ b/widget/templates/layouts/item-2.html
@@ -1,4 +1,4 @@
-<div class="holder padding-zero">
+<div class="holder padding-zero text-overlay">
     <div class="media-center-plugin layout2">
         <div class="people-banner border-bottom-grey">
             <div class="people-bg padding-top-fifteen padding-bottom-fifteen clearfix">
