--- a/widget/templates/layouts/list-2.html
+++ b/widget/templates/layouts/list-2.html
@@ -1,9 +1,9 @@
 <div class="holder padding-zero">
-    <div id="scroll-infinite" class="media-center-plugin layout3">
+    <div id="scroll-infinite" class="media-center-plugin layout3 text-overlay">
         <div class="media-center-banner clearfix border-bottom-grey">
             <div id="carousel" build-fire-carousel=""></div>
         </div>
-        <div class="text-left padded padding-bottom-zero clearfix">
+        <div class="text-left padded padding-bottom-zero clearfix text-overlay">
             <p ng-if="WidgetHome.media.data.content.descriptionHTML"
                ng-bind-html="WidgetHome.media.data.content.descriptionHTML | safeHtml">
                 {{WidgetHome.media.data.content.descriptionHTML}}</p>
@@ -14,13 +14,14 @@
              infinite-scroll-disabled="WidgetHome.noMore"
              infinite-scroll-container='"#scroll-infinite"'
              infinite-scroll-distance="0">
-            <div class="clickable list-item" ng-repeat="item in WidgetHome.items" ng-click="WidgetHome.goToMedia($index)">
+            <div class="clickable list-item text-overlay" ng-repeat="item in WidgetHome.items"
+                 ng-click="WidgetHome.goToMedia($index)">
                 <div class="list-item-media text-left overflow-hidden">
-                    <div class="list-media-holder pull-left" ng-if="item.data.topImage"
+                    <div class="list-media-holder pull-left text-overlay" ng-if="item.data.topImage"
                          play-btn="{{item.data.videoUrl.length > 0}}">
                         <img ng-src="{{item.data.topImage | cropImage:110:60}}">
                     </div>
-                    <div class="list-item-copy text-left padding-left-ten padding-right-ten">
+                    <div class="list-item-copy text-left padding-left-ten padding-right-ten text-overlay">
                         <p class="ellipsis margin-zero"><a class="text-primary">{{item.data.title}}</a></p>
 
                         <p class="summary ellipsis margin-zero">{{item.data.summary}}</p>
