--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -1,23 +1,27 @@
 <div class="holder padding-zero">
-    <div id="scroll-infinite" class="media-center-plugin layout3">
-        <div class="plugin-banner clearfix border-bottom-grey">
+    <div id="scroll-infinite" class="media-center-plugin layout3 text-overlay">
+        <div class="plugin-banner clearfix border-bottom-grey text-overlay">
             <div id="carousel" build-fire-carousel=""></div>
         </div>
-        <div class="padded text-left">
-            <p class="margin-bottom-zero" ng-if="WidgetHome.media.data.content.descriptionHTML" ng-bind-html="WidgetHome.media.data.content.descriptionHTML | safeHtml">{{WidgetHome.media.data.content.descriptionHTML}}</p>
+        <div class="padded text-left text-overlay">
+            <p class="margin-bottom-zero" ng-if="WidgetHome.media.data.content.descriptionHTML"
+               ng-bind-html="WidgetHome.media.data.content.descriptionHTML | safeHtml">
+                {{WidgetHome.media.data.content.descriptionHTML}}</p>
         </div>
         <div infinite-scroll-distance="0"
              infinite-scroll="WidgetHome.loadMore()"
              infinite-scroll-disabled="WidgetHome.noMore"
              infinite-scroll-container='"#scroll-infinite"'>
-            <div class="clickable" ng-repeat="item in WidgetHome.items" ng-click="WidgetHome.goToMedia($index)">
-                <div class="plugin-banner clearfix">
-                    <div class="" ng-if="item.data.topImage" play-btn="{{item.data.videoUrl.length > 0}}">
+            <div class="clickable text-overlay" ng-repeat="item in WidgetHome.items"
+                 ng-click="WidgetHome.goToMedia($index)">
+                <div class="plugin-banner clearfix text-overlay">
+                    <div class="text-overlay" ng-if="item.data.topImage" play-btn="{{item.data.videoUrl.length > 0}}">
                         <img ng-src="{{item.data.topImage | cropImage:340:190}}">
                     </div>
                 </div>
-                <div class="padded text-left">
+                <div class="padded text-left text-overlay">
                     <a class="text-primary">{{item.data.title}}</a>
+
                     <p class="margin-bottom-zero">{{item.data.summary}}</p>
                     <span class="list-item-date" data-ng-if="item.data.mediaDate">{{item.data.mediaDate  | jsDate | date:"MMMM dd, yyyy"}}</span>
                 </div>
