removed the unwanted code

--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -143,7 +143,7 @@
     <div class="main col-md-9 pull-right">
         <div class="col-md-6 pull-right padding-right-zero padding-left-ten">
             <a class="btn btn-primary pull-right stretch" ng-click="ContentMedia.done()"
-               ng-disabled="ContentPeopleContentMedia.unchangedData || !ContentMedia.isItemValid" href="javaScript:void(0);">Done</a>
+               ng-disabled="!ContentMedia.isItemValid" href="javaScript:void(0);">Done</a>
         </div>
     </div>
 </div>
