--- a/widget/templates/layouts/list-4.html
+++ b/widget/templates/layouts/list-4.html
@@ -4,9 +4,8 @@
             <div id="carousel" build-fire-carousel=""></div>
         </div>
         <div class="text-left padded padding-bottom-zero clearfix text-overlay">
-            <p ng-if="WidgetHome.media.data.content.descriptionHTML"
-               ng-bind-html="WidgetHome.media.data.content.descriptionHTML | safeHtml">
-                {{WidgetHome.media.data.content.descriptionHTML}}</p>
+            <p ng-if="WidgetHome.showDescription()"
+               ng-bind-html="WidgetHome.media.data.content.descriptionHTML | safeHtml"></p>
         </div>
         <div class="padded padding-top-zero text-overlay">
             <div class="list-layout" infinite-scroll="WidgetHome.loadMore()"
