--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -4,9 +4,9 @@
             <div id="carousel" build-fire-carousel=""></div>
         </div>
         <div class="padded text-left text-overlay">
-            <p class="margin-bottom-zero" ng-if="WidgetHome.media.data.content.descriptionHTML"
+            <p class="margin-bottom-zero" ng-if="WidgetHome.showDescription()"
                ng-bind-html="WidgetHome.media.data.content.descriptionHTML | safeHtml">
-                {{WidgetHome.media.data.content.descriptionHTML}}</p>
+            </p>
         </div>
         <div infinite-scroll-distance="0"
              infinite-scroll="WidgetHome.loadMore()"
