Added min-height for layout 1 and 4

--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -275,3 +275,8 @@ videogular, [videogular] {
 .text-overlay {
     position: relative
 }
+
+.layout1 .list-layout .list-item-copy,
+.layout4 .list-layout .list-item-copy {
+    min-height: 80px;
+}
