--- a/widget/templates/layouts/list-2.html
+++ b/widget/templates/layouts/list-2.html
@@ -22,7 +22,7 @@
                         <img ng-src="{{item.data.topImage | cropImage:110:60}}">
                     </div>
                     <div class="list-item-copy text-left padding-left-ten padding-right-ten text-overlay">
-                        <p class="ellipsis margin-zero"><a class="text-primary">{{item.data.title}}</a></p>
+                        <p class="ellipsis margin-zero text-primary"><a class="text-primary">{{item.data.title}}</a></p>
 
                         <p class="summary ellipsis margin-zero">{{item.data.summary}}</p>
                         <span class="list-item-date" data-ng-if="item.data.mediaDate">{{item.data.mediaDate  | jsDate | date:"MMMM dd, yyyy"}}</span>
