--- a/widget/templates/layouts/list-1.html
+++ b/widget/templates/layouts/list-1.html
@@ -1,5 +1,5 @@
 <div class="holder padding-zero">
-    <div id="scroll-infinite" class="media-center-plugin layout1 text-overlay">
+    <div class="media-center-plugin layout1 text-overlay">
         <div class="plugin-banner clearfix border-bottom-grey">
             <div id="carousel" build-fire-carousel=""></div>
         </div>
@@ -13,7 +13,6 @@
                 <div class="row"
                      infinite-scroll-distance="0"
                      infinite-scroll="WidgetHome.loadMore()"
-                     infinite-scroll-container='"#scroll-infinite"'
                      infinit-scroll-disabled="WidgetHome.noMore"
                         >
                     <div class="clickable col-xs-6 pull-left text-overlay" ng-repeat="item in WidgetHome.items"
