--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -1,5 +1,5 @@
 <div class="holder padding-zero">
-    <div id="scroll-infinite" class="media-center-plugin layout3 text-overlay">
+    <div class="media-center-plugin layout3 text-overlay">
         <div class="plugin-banner clearfix border-bottom-grey text-overlay">
             <div id="carousel" build-fire-carousel=""></div>
         </div>
@@ -10,8 +10,7 @@
         </div>
         <div infinite-scroll-distance="0"
              infinite-scroll="WidgetHome.loadMore()"
-             infinite-scroll-disabled="WidgetHome.noMore"
-             infinite-scroll-container='"#scroll-infinite"'>
+             infinite-scroll-disabled="WidgetHome.noMore">
             <div class="clickable text-overlay" ng-repeat="item in WidgetHome.items"
                  ng-click="WidgetHome.goToMedia($index)">
                 <div class="plugin-banner clearfix text-overlay">
