--- a/widget/templates/layouts/list-2.html
+++ b/widget/templates/layouts/list-2.html
@@ -11,8 +11,9 @@
 
         <div class="list-layout"
              infinite-scroll="WidgetHome.loadMore()"
-             infinite-scroll-disabled="WidgetHome.noMore"
-             infinite-scroll-distance="0">
+             infinite-scroll-distance="1"
+             data-infinite-container=".infinite-scroll-parent"
+             infinite-scroll-disabled="WidgetHome.noMore">
             <div class="clickable list-item text-overlay" ng-repeat="item in WidgetHome.items"
                  ng-click="WidgetHome.goToMedia($index)">
                 <div class="list-item-media text-left overflow-hidden">
