--- a/control/content/templates/home.html
+++ b/control/content/templates/home.html
@@ -39,7 +39,8 @@
     </div>
     <div class="main pull-right col-md-9 padding-left-zero row">
         <div class="dropdown pull-left col-md-8 padding-zero" dropdown is-open="status.isopen">
-            <button class="btn btn-default text-left dropdown-toggle" dropdown-toggle ng-disabled="disabled" aria-expanded="true">
+            <button class="btn btn-default text-left dropdown-toggle" dropdown-toggle ng-disabled="disabled"
+                    aria-expanded="true">
                 <span class="pull-left">{{ContentHome.info.data.content.sortByValue || 'Newest'}}</span>
                 <span class="chevron icon-chevron-down pull-right"></span>
             </button>
@@ -69,19 +70,19 @@
 </div>
 <hr>
 <div class="item clearfix">
-    <div id="scroll-infinite"
-         class="tab-order draggable-list-view wide-list has-btn-link border-grey border-radius-four">
-        <div infinite-scroll-distance="0"
-             infinite-scroll="ContentHome.getMore()"
-             infinite-scroll-disabled="ContentHome.noMore"
-             infinite-scroll-container="'#scroll-infinite'">
+    <div class="tab-order draggable-list-view wide-list has-btn-link border-grey border-radius-four">
+        <div infinite-scroll="ContentHome.getMore()"
+             infinite-scroll-distance="1"
+             data-infinite-container=".infinite-scroll-parent"
+             infinite-scroll-disabled="ContentHome.noMore">
             <div ui-sortable="ContentHome.itemSortableOptions" ng-model="ContentHome.items">
                 <div class="well text-center margin-bottom-zero border-none" ng-if="ContentHome.items.length <1">
                     <p class="margin-zero">No items found.</p>
                 </div>
                 <div class="d-item double-line square-icon clearfix" ng-if="ContentHome.items.length"
                      ng-repeat="item in ContentHome.items">
-                    <span class="icon icon-menu pull-left cursor-grab"  ng-class="{ 'disabled': ContentHome.itemSortableOptions.disabled }"></span>
+                    <span class="icon icon-menu pull-left cursor-grab"
+                          ng-class="{ 'disabled': ContentHome.itemSortableOptions.disabled }"></span>
 
                     <div class="media-holder pull-left">
                         <img ng-src="{{item.data.topImage | resizeImage : 50:50}}" ng-if="item.data.topImage">
