Background image fix

--- a/widget/templates/home.html
+++ b/widget/templates/home.html
@@ -1,7 +1,7 @@
-<div class="overlay background"
+<!--<div class="overlay background"
      ng-if="WidgetHome.media.data.design.backgroundImage && WidgetHome.deviceWidth != 0 && WidgeHome.deviceHeight != 0">
     <img ng-src="{{WidgetHome.media.data.design.backgroundImage |cropImage : WidgetHome.deviceWidth : WidgetHome.deviceHeight}}">
-</div>
+</div>-->
 <div id="home">
     <div ng-if="WidgetHome.media.data.design.listLayout"
          ng-include="'templates/layouts/' + WidgetHome.media.data.design.listLayout+ '.html'">
