Added placeholder on list layout 1 #857

--- a/widget/templates/layouts/list-1.html
+++ b/widget/templates/layouts/list-1.html
@@ -19,9 +19,9 @@
                          ng-click="WidgetHome.goToMedia($index)" ng-class-odd="list-item-odd"
                          ng-class-even="list-item-even">
                         <div class="list-item-media text-center border-radius-three overflow-hidden text-overlay">
-                            <div play-btn="{{item.data.videoUrl.length > 0}}" class="list-media-holder text-overlay"
-                                 ng-if="item.data.topImage">
-                                <img ng-src="{{item.data.topImage | cropImage:153:86}}">
+                            <div play-btn="{{item.data.videoUrl.length > 0}}" class="list-media-holder text-overlay">
+                                <img ng-if="item.data.topImage" ng-src="{{item.data.topImage | cropImage:153:86}}">
+                                <img ng-if="!item.data.topImage" src="assets/images/placeholder16x9.png">
                             </div>
                         </div>
                         <div class="list-item-copy text-left">
