--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -297,3 +297,10 @@ videogular, [videogular] {
 .body-scroll {
     height: auto !important;
 }
+/*Style to fix the audio player ui*/
+.audio-player{
+    overflow: hidden !important;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+}
