Johns changes in Item layout 4 - Add placeholder image, #877, #953 fixed

--- a/control/content/assets/css/control.content.css
+++ b/control/content/assets/css/control.content.css
@@ -34,3 +34,7 @@ Style for loader
 .infinite-scroll-parent{
     height:1000px !important;
 }
+
+.no-max-height{
+    max-height: none !important;
+}
