--- a/widget/templates/layouts/list-4.html
+++ b/widget/templates/layouts/list-4.html
@@ -20,10 +20,14 @@
                                  play-btn="{{WidgetHome.items[$index].data.videoUrl.length > 0}}">
                                 <img ng-if="WidgetHome.items[$index].data.topImage"
                                      ng-src="{{WidgetHome.items[$index].data.topImage | cropImage:200:200}}">
+                                <img ng-if="!WidgetHome.items[$index].data.topImage"
+                                     src="assets/images/placeholder200x200.png">
                             </div>
                         </div>
                         <div class="list-item-copy text-left text-overlay">
-                            <a class="ellipsis margin-zero text-primary">{{WidgetHome.items[$index].data.title}}</a>
+                            <p class="text-primary ellipsis">
+                                <a class="ellipsis margin-zero text-primary">{{WidgetHome.items[$index].data.title}}</a>
+                            </p>
 
                             <p class="summary ellipsis margin-zero">{{WidgetHome.items[$index].data.summary}}</p>
                             <span class="list-item-date" data-ng-if="WidgetHome.items[$index].data.mediaDate">{{WidgetHome.items[$index].data.mediaDate  | jsDate | date:"MMMM dd, yyyy"}}</span>
@@ -36,11 +40,15 @@
                                  play-btn="{{WidgetHome.items[$index+1].data.videoUrl.length > 0}}">
                                 <img ng-if="WidgetHome.items[$index + 1].data.topImage"
                                      ng-src="{{WidgetHome.items[$index + 1].data.topImage | cropImage:200:200}}">
+                                <img ng-if="!WidgetHome.items[$index + 1].data.topImage"
+                                     src="assets/images/placeholder200x200.png">
                             </div>
                         </div>
                         <div class="list-item-copy text-left text-overlay">
-                            <a class="ellipsis margin-zero text-primary">{{WidgetHome.items[$index + 1].data.title}}</a>
-
+                            <p class="text-primary ellipsis">
+                                <a class="ellipsis margin-zero text-primary">{{WidgetHome.items[$index +
+                                    1].data.title}}</a>
+                            </p>
                             <p class="summary ellipsis margin-zero">{{WidgetHome.items[$index + 1].data.summary}}</p>
                             <span class="list-item-date" data-ng-if="WidgetHome.items[$index + 1].data.mediaDate">{{WidgetHome.items[$index + 1].data.mediaDate  | jsDate | date:"MMMM dd, yyyy"}}</span>
                         </div>
