--- a/control/content/templates/home.html
+++ b/control/content/templates/home.html
@@ -70,7 +70,7 @@
 </div>
 <hr>
 <div class="item clearfix">
-    <div class="tab-order draggable-list-view wide-list has-btn-link border-grey border-radius-four">
+    <div class="tab-order draggable-list-view wide-list has-btn-link border-grey border-radius-four no-max-height">
         <div infinite-scroll="ContentHome.getMore()"
              infinite-scroll-distance="1"
              data-infinite-container=".infinite-scroll-parent"
