--- a/control/content/assets/css/control.content.css
+++ b/control/content/assets/css/control.content.css
@@ -31,10 +31,11 @@ Style for loader
     color: #8a6d3b;
 }
 
+/*
 .infinite-scroll-parent{
     height:1000px !important;
 }
 
 .no-max-height{
     max-height: none !important;
-}
+}*/
