Changed the class on audio player buttons

--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -305,6 +305,6 @@ videogular, [videogular] {
     height: 100%;
 }
 
-.audio-player-icon{
-    color: white!important;
+.holder.now-playing .audio-player-icon{
+    color: white !important;
 }
