lazy load control panel code revert

--- a/control/content/assets/css/control.content.css
+++ b/control/content/assets/css/control.content.css
@@ -31,11 +31,10 @@ Style for loader
     color: #8a6d3b;
 }
 
-/*
 .infinite-scroll-parent{
     height:1000px !important;
 }
 
 .no-max-height{
     max-height: none !important;
-}*/
+}
