--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -1,5 +1,5 @@
 <div class="holder now-playing text-center audio-player">
-    // need to refactor this.
+    <!--// need to refactor this.-->
     <div ng-style="NowPlaying.item.data.image? {'background':'url(' + NowPlaying.item.data.image + ') no-repeat center center' ,
           '-o-filter': 'blur(10px) brightness(0.2)',
     '-moz-filter': 'blur(10px) brightness(0.2)',
